[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/frosted_glass.jpg" type="Texture" id=2]
[ext_resource path="res://Win_menu.gd" type="Script" id=3]
[ext_resource path="res://resources/win_menu_title.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/audio/click_002.ogg" type="AudioStream" id=5]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="CanvasItemMaterial" id=2]

[node name="Win_menu" type="Node2D" groups=[
"win_menu",
]]
pause_mode = 2
light_mask = 0
material = SubResource( 1 )
position = Vector2( 260, 150 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 20.0
margin_top = 10.0
margin_right = 480.0
margin_bottom = 310.0
rect_min_size = Vector2( 460, 290 )
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 460.0
margin_bottom = 300.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 460.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 35 )
custom_fonts/font = ExtResource( 4 )
text = "MENU"
align = 1

[node name="Spacer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 460.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 460.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 30 )

[node name="Win_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer7"]
margin_top = 1.0
margin_right = 460.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "PLAYER 1 WINS"
align = 1

[node name="Spacer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 460.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer8" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 460.0
margin_bottom = 213.0

[node name="Start_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer8"]
margin_left = 39.0
margin_right = 189.0
margin_bottom = 33.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 6
size_flags_vertical = 0
text = "RESTART"

[node name="Quit_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer8"]
margin_left = 271.0
margin_right = 421.0
margin_bottom = 33.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 6
text = "QUIT"

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
